api, admin: add order page

--- a/admin/src/app/core/components/layout/navigation/navigation.component.html
+++ b/admin/src/app/core/components/layout/navigation/navigation.component.html
@@ -4,7 +4,7 @@
       class="flex h-10 items-center px-6 text-lg hover:bg-hoverColor cursor-pointer"
       [routerLink]="item.to"
     >
-      <i class="{{ item.icon }} mr-2 text-textColor/50"></i>
+      <mat-icon class="mr-2">{{item.icon}}</mat-icon>
       <p>{{ item.text }}</p>
     </a>
   </div>
