--- a/admin/src/app/core/components/layout/layout.component.html
+++ b/admin/src/app/core/components/layout/layout.component.html
@@ -2,7 +2,7 @@
 <div class="flex h-[calc(100%-3rem)] relative">
   <app-navigation
     *ngIf="globalService.isOpenNav"
-    class="w-full h-full sm:w-48 absolute sm:relative bg-backgroundColor"
+    class="z-[999] w-full h-full sm:w-48 absolute sm:relative bg-backgroundColor"
   ></app-navigation>
   <div class="flex-1 flex flex-col lg:flex-row">
     <ng-container *ngIf="content; else defaultContent">
