--- a/admin/src/app/pages/authorized/category/category.component.html
+++ b/admin/src/app/pages/authorized/category/category.component.html
@@ -53,6 +53,7 @@
       </tr>
 
       <mat-paginator
+        [pageSize]="10"
         [pageSizeOptions]="[5, 10, 25, 100]"
         aria-label="Select page of users"
       ></mat-paginator>
