--- a/admin/src/app/pages/authorized/product/product.component.html
+++ b/admin/src/app/pages/authorized/product/product.component.html
@@ -99,6 +99,7 @@
       </tr>
 
       <mat-paginator
+        [pageSize]="10"
         [pageSizeOptions]="[5, 10, 25, 100]"
         aria-label="Select page of users"
       ></mat-paginator>
